<resources>
    <string name="app_name">Quokkaism</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_my_profile">حساب کاربری</string>
    <string name="login_signup">ورود/ثبت نام</string>
    <string name="home">خانه</string>
    <string name="setting">تنظیمات</string>
    <string name="about_us">درباره ما</string>
    <string name="profile">حساب کاربری</string>
    <string name="likes">علاقه‌مندی‌ها</string>
    <string name="error_on_connecting_to_server">خطا در برقراری ارتباط با سرور</string>
    <string name="username_or_password_is_incorrect">نام کاربری یا رمز عبور اشتباه است</string>
    <string name="retry">تلاش مجدد</string>
    <string name="welcome">خوش آمدید</string>
    <string name="default_notification_channel_id">quokkaism_notification_channel_id</string>
    <string name="login">ورود</string>
    <string name="enjoy_your_life_with_quokka">با کوئوکا از زندگی لذت ببرید</string>
    <string name="enter_your_email">ایمیل خود را وارد کنید</string>
    <string name="enter_your_password">رمز عبور خود را وارد کنید</string>
    <string name="entered_email_is_invalid">آدرس ایمیل وارد شده اشتباه است</string>
    <string name="email_label">ایمیل :‌</string>
    <string name="hours">ساعت</string>
    <string name="receive_notifications_setting">تنظیمات دریافت اعلان‌ها</string>
    <string name="signup">ثبت نام</string>
    <string name="name">نام</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="submit">ثبت</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="name_is_required">وارد کردن نام الزامیست</string>
    <string name="email_is_required">وارد کردن ایمیل الزامیست</string>
    <string name="email_is_incorrect">ایمیل وارد شده اشتباه است</string>
    <string name="password_is_required">وارد کردن رمز عبور الزامیست</string>
    <string name="repeat_password_is_required">وارد کردن تکرار رمز عبور الزامیست</string>
    <string name="password_and_repeat_are_not_the_same">رمز عبور و تکرار آن یکسان نیست</string>
    <string name="registered_successfully">حساب کاربری با موفقیت ساخته شد</string>
    <string name="i_have_account_already">حساب کاربری دارم</string>
    <string name="not_registered_yet">تا به حال حساب کاربری نداشته‌ام</string>
    <string name="failed_to_connect_server">خطا در برقراری ارتباط با سرور</string>
    <string name="save">ذخیره</string>
    <string name="setting_changed_successfully">تنظیمات با موفقیت به‌روز‌رسانی شد</string>
    <string name="you_should_change_setting_from_previous_version">لازم است تنظیمات جدید با تنظیمات پیشین متفاوت باشد</string>
    <string name="the_text_copied_successfully">متن مورد نظر با موفقیت کپی شد</string>
    <string name="sharing">اشتراک گذاری</string>
    <string name="share_using">اشتراک گذاری با…</string>
    <string name="syncing_with_server">در حال همگام‌سازی با سرور…</string>
    <string name="fetching_data_from_server">در حال دریافت اطلاعات از سرور…</string>
    <string name="about_us_desc">با کمتر از یک دقیقه در روز، به یک انسان آرام و با انرژی مثبت تبدیل شوید. با استفاده از برنامه کوئوکا در طول روز انرژی مثبت داشته باشید و قدم به قدم به آرامش بیشتر، نزدیک شوید.
کوئوکا به شما یادآوری می‌کند لحظه‌ای نفس بکشید، لبخند بزنید و لذت ببرید تا روز خوبی را داشته باشید.</string>
    <string name="search">جستجو</string>
    <string name="no_result">عبارتی یافت نشد</string>
</resources>
