<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ms.quokkaism.ui.login.LoginFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:background="@drawable/shape_bottom_left_rounded_30dp_green"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/login_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_height_min"
        android:minWidth="@dimen/button_height_min"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?selectableItemBackground"
        app:srcCompat="@drawable/ic_arrow_white"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline2"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_back_btn"
        app:layout_constraintBottom_toBottomOf="@id/login_back_btn" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_bg_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleY="0.9"
        android:scaleX="0.9"
        app:layout_constraintTop_toBottomOf="@id/login_back_btn"
        app:srcCompat="@drawable/ic_bg_login"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_desc_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline1"
        android:text="@string/enjoy_your_life_with_quokka"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        android:textColor="@color/white"
        android:maxLines="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_bg_iv"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_email_et"
        style="?textAppearanceBody1"
        android:textAppearance="?textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/edit_text_height"
        app:layout_constraintStart_toStartOf="@id/login_desc_tv"
        app:layout_constraintEnd_toEndOf="@id/login_desc_tv"
        app:layout_constraintTop_toBottomOf="@id/login_desc_tv"
        android:gravity="end|center_vertical"
        android:textColorHint="@color/gray"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:background="@drawable/shape_rounded_25dp_white"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_password_et"
        style="?textAppearanceBody1"
        android:textAppearance="?textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/edit_text_height"
        app:layout_constraintStart_toStartOf="@id/login_desc_tv"
        app:layout_constraintEnd_toEndOf="@id/login_desc_tv"
        app:layout_constraintTop_toBottomOf="@id/login_email_et"
        android:gravity="end|center_vertical"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:background="@drawable/shape_rounded_25dp_white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_not_registered_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAppearance="?attr/textAppearanceCaption"
        android:text="@string/not_registered_yet"
        app:layout_constraintStart_toStartOf="@id/login_btn_layout"
        app:layout_constraintEnd_toEndOf="@id/login_btn_layout"
        app:layout_constraintBottom_toTopOf="@id/login_btn_layout"/>

    <LinearLayout
        android:id="@+id/login_btn_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_desc_tv"
        app:layout_constraintEnd_toEndOf="@id/login_desc_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="28dp">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_button_height_default"
        app:cornerRadius="28dp"
        style="?textAppearanceHeadline2"
        android:text="@string/login"
        app:backgroundTint="@color/peach_orange"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
