<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ms.quokkaism.ui.profile.ProfileFragment">

    <View
        android:id="@+id/profile_bg_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_avatar_iv"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_top_left_rounded_30dp_white"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_bg_flower_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="36dp"/>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profile_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_height_min"
        android:minWidth="@dimen/button_height_min"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?selectableItemBackground"
        app:tint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_menu"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline2"
        android:text="@string/profile"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_menu_btn"
        app:layout_constraintBottom_toBottomOf="@id/profile_menu_btn"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile_avatar_iv"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/ic_profile"
        app:layout_constraintTop_toBottomOf="@id/profile_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline2"
        tools:text="@string/login"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@id/profile_avatar_iv"
        app:layout_constraintTop_toTopOf="@id/profile_avatar_iv"
        app:layout_constraintBottom_toBottomOf="@id/profile_avatar_iv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_email_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline3"
        android:text="@string/email_label"
        android:gravity="end|center_vertical"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_bg_view"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/card_height_default"
        app:cardCornerRadius="@dimen/card_corner_radius_default"
        app:cardElevation="@dimen/card_corner_radius_default"
        app:layout_constraintStart_toStartOf="@id/profile_email_title_tv"
        app:layout_constraintEnd_toEndOf="@id/profile_email_title_tv"
        app:layout_constraintTop_toBottomOf="@id/profile_email_title_tv"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white_gray">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline3"
            tools:text="meysam.shohrat@gmail.com"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
